2010-07-25 Homer Xing <homer.xing@gmail.com>

    * Improve behaviour of agreement dialog.
      When the user select "I agree." and press "No", then still show dialog next time.
    * Add qcad-doc in qcad item
    * Do not repeatly display error messages on same file from get_information_pixbuf()
    * Synchronize online data in main process.
    * Show software status as tick or cross.
    * Change sort order of software items. Installed items are at bottom.
    * Support for saving and loading installed software items.
    * Display less indent in "print computer information" dialog.
    * Improve the introduction text of /apps/update-notifier/auto_launch
    * Support for disabling GNOME login sound
    * Improve the introduction text of /apps/gdm/simple-greeter/disable_user_list
    * Suggest to remove ubuntu-docs package to free 270M disk space.
    * Improve code. Do not use string replacement for $version. Use VERSION inline.

2010-07-23 Homer Xing <homer.xing@gmail.com>

    * Prompt to do synchronization if new icon pack is available.
    * Add Gajim and PSI, two GTalk clients. Issue 979.

2010-07-23 MA Yue <velly.empire@gmail.com>

    * Add 31 applications icons

2010-07-22 Homer Xing <homer.xing@gmail.com>

    * Fix issue 986. for row in func.result: 'NoneType' object is not iterable
    * Add wxmaxima, a Computer Algebra System.
    * Add scilab, one of several open source alternatives to MATLAB.
    * Add rkward, A graphic user interface to the R programming language.
    * Add qBittorrent, featureful open source equivalent to utorrent.
    * Add DeaDBeeF, ultimate music player.
    * Add Fatrat, a feature rich download manager.
    * Add Mobloquer, protect internet privacy.
    * Add JabRef, bibliography reference manager.
    * Fix depencency error (if any) before installing.
    * Fix issue 692, broken link error.

2010-07-21 Homer Xing <homer.xing@gmail.com>

    * Add a new tip: view the IP address outside the local network