@@ -1,3 +1,7 @@
+2010-07-26 Homer Xing <homer.xing@gmail.com>
+
+    * Use a proxy server if http_proxy environment variable is set
+
 2010-07-25 Homer Xing <homer.xing@gmail.com>
 
     * Improve behaviour of agreement dialog.
